Curves sculptmode: Stabilize Stroke misses paint cursor indicator line #101518

Closed
opened 2022-10-01 11:05:22 +02:00 by Philipp Oeser · 3 comments
Member

System Information
Operating system: Linux-5.19.6-200.fc36.x86_64-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 00:09, hash: 8a68f4f808
Worked: -

Short description of error
Sculpt Curves: Stabilize Stroke misses paint cursor indicator line

Exact steps for others to reproduce the error

from the default startp file:

  • add Curve > Random
  • enter sculpt mode
  • choose the Comb brush
  • in the sidebar Tool panel > Brush Settings > Stroke, enable Stabilize Stroke
  • do a stroke > it misses the indicator line following the cursor
**System Information** Operating system: Linux-5.19.6-200.fc36.x86_64-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 00:09, hash: `8a68f4f808` Worked: - **Short description of error** Sculpt Curves: Stabilize Stroke misses paint cursor indicator line **Exact steps for others to reproduce the error** from the default startp file: - add `Curve` > `Random` - enter sculpt mode - choose the `Comb` brush - in the sidebar `Tool` panel > `Brush Settings` > `Stroke`, enable `Stabilize Stroke` - do a stroke > it misses the indicator line following the cursor
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2022-10-01 11:05:52 +02:00
Author
Member

Think I got a fix

Think I got a fix
Philipp Oeser changed title from Sculpt Curves: Stabalize Stroke misses paint cursor indicator line to Sculpt Curves: Stabilize Stroke misses paint cursor indicator line 2022-10-01 11:06:12 +02:00
Philipp Oeser changed title from Sculpt Curves: Stabilize Stroke misses paint cursor indicator line to Curves sculptmode: Stabilize Stroke misses paint cursor indicator line 2022-10-12 10:41:39 +02:00
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:43:35 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-22 11:43:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101518
No description provided.