source/blender/editors/sculpt_paint/curves_sculpt_ops.cc
@@ -286,6 +286,11 @@ static void curves_sculptmode_enter(bContext *C)
 
   ob->mode = OB_MODE_SCULPT_CURVES;
 
+  /* Setup cursor color. BKE_paint_init() could be used, but creates an additional brush. */
+  Paint *paint = BKE_paint_get_active_from_paintmode(scene, PAINT_MODE_SCULPT_CURVES);
+  copy_v3_v3_uchar(paint->paint_cursor_col, PAINT_CURSOR_SCULPT_CURVES);
+  paint->paint_cursor_col[3] = 128;
+
   ED_paint_cursor_start(&curves_sculpt->paint, CURVES_SCULPT_mode_poll_view3d);
   paint_init_pivot(ob, scene);
 
